--- a/src/screens/CSS/index.css
+++ b/src/screens/CSS/index.css
@@ -31,9 +31,30 @@
   margin: 5px;
   padding: 20px;
   border-radius: 5px;
+  flex-direction: row;
 }
 
-@media (max-width: 700px){
+.story__container {
+  display: flex;
+  flex-direction: column;
+  padding: 5;
+  width: 100%;
+  margin: 5px;
+  align-items: center;
+  justify-items: center;
+}
+
+.story__header_title {
+  font-size: large;
+  font-weight: bold;
+  padding: 5,
+}
+
+.story__header_body {
+  align-items: flex-end;
+}
+
+@media (max-width: 800px){
   .stories {
     width: 95%;
   }
