--- a/src/screens/CSS/index.css
+++ b/src/screens/CSS/index.css
@@ -1,6 +1,7 @@
 .container {
-  width: 100vw;
-  height: 100vh;
+  /* width: 100vw; */
+  width: 100%;
+  height: 100vf;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,7 +37,7 @@
 
 .story__container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   padding: 5;
   width: 100%;
   margin: 5px;
@@ -45,16 +46,27 @@
 }
 
 .story__header_title {
+  display: flex;
+  flex: 1;
+  width: 30%;
+  max-width: 30%;
+  align-self:flex-start;
   font-size: large;
   font-weight: bold;
-  padding: 5,
+  left: 0;
+  word-wrap: break-word;
 }
 
 .story__header_body {
   align-items: flex-end;
+  margin-left: auto;
+  width: 70%;
+  max-width: 70%;
+  margin-right: auto;
+  word-wrap: break-word;
 }
 
-@media (max-width: 800px){
+@media (max-width: 700px){
   .stories {
     width: 95%;
   }
